crates/fossil-codegen/tests/snapshots/aggregate_sum.snap
---
source: crates/fossil-codegen/tests/corpus.rs
expression: sql_for(idx)
---
CREATE VIEW orders AS
SELECT * FROM read_csv_auto('examples/orders.csv', sample_size=-1);
COPY (
    SELECT
        step_2.iri AS subject,
        'https://example.org/name' AS predicate,
        step_2.name AS object
    FROM (SELECT user_id, SUM(amount) AS "total" FROM (orders) GROUP BY user_id) AS step_2
) TO 'output.parquet' (FORMAT PARQUET);
