crates/fossil-codegen/tests/snapshots/extend_call.snap
---
source: crates/fossil-codegen/tests/corpus.rs
expression: sql_for(idx)
---
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        users.iri AS subject,
        'https://example.org/name' AS predicate,
        step_1.upper_name AS object
    FROM users
) TO 'output.parquet' (FORMAT PARQUET);
