crates/fossil-codegen/tests/snapshots/join_left_outer.snap
---
source: crates/fossil-codegen/tests/corpus.rs
expression: sql_for(idx)
---
CREATE VIEW orders AS
SELECT * FROM read_csv_auto('examples/orders.csv', sample_size=-1);
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        step_2.iri AS subject,
        'https://example.org/name' AS predicate,
        step_2.name AS object
    FROM (SELECT orders.*, users.* FROM (orders) AS orders LEFT OUTER JOIN (users) AS users ON orders.user_id = users.id) AS step_2
) TO 'output.parquet' (FORMAT PARQUET);
